--- a/_sass/_default_colors.scss
+++ b/_sass/_default_colors.scss
@@ -8,7 +8,7 @@ $bouquet: #aa759f;
 $chelsea-cucumber: #90a959;
 $cod-grey: #151515;
 $conifer: #b5e853;
-$dove-grey: #666;
+$dove-grey: rgb(223, 12, 12);
 $gallery: #eaeaea;
 $grey: #888;
 $gulf-stream: #75b5aa;
