--- a/_sass/_default_colors.scss
+++ b/_sass/_default_colors.scss
@@ -5,7 +5,7 @@
 $apple-blossom: #ac4142;
 $alto: #d0d0d0;
 $bouquet: #aa759f;
-$chelsea-cucumber: #90a959;
+$chelsea-cucumber: hwb(0 5% 13%);
 $cod-grey: #151515;
 $conifer: hwb(0 5% 13%);
 $dove-grey: hwb(0 5% 13%);
